# vervolg

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
data/: names.csv
doc/: design_notes.md
src/: algebra.rs  ast.rs  eval.rs  lib.rs  schema.rs  session.rs  sql.lalrpop  storage.rs  symbols.rs  types.rs
src/ast/: mod.rs  tests.rs  typing.rs
