[package]
name = "vervolg"
version = "0.1.0"
authors = ["Hans-Martin Will <hwill@acm.org>"]
build = "build.rs"

[dependencies]

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.regex]
version = "0.2.0"

[dependencies.lalrpop-util]
version = "0.13.1"

[build-dependencies.lalrpop]
version = "0.13.1"