[package]
name = "vervolg"
version = "0.1.0"
description = "SQL-frontend in Rust"
authors = ["Hans-Martin Will <hwill@acm.org>"]
build = "build.rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hmwill/vervolg"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

csv = "1.0.0-beta.5"
users = "0.6.0"
tabwriter = "1"

[dependencies.regex]
version = "0.2.0"

[dependencies.lalrpop-util]
version = "0.13.1"

[build-dependencies.lalrpop]
version = "0.13.1"